--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "Mini Mocking API calls application",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js -e js,pug"
+    "start": "nodemon index.js -e js,pug",
+    "dev": "nodemon -r dotenv/config index.js -e js,pug",
+    "prod": "node index.js"
   },
   "author": "Tushar J",
   "license": "ISC",
   "devDependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "nodemon": "^2.0.4",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "redis": "^3.0.2"
   }
 }
