--- a/client/package.json
+++ b/client/package.json
@@ -11,23 +11,13 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
-  "devDependencies": {
-    "body-parser": "^1.19.0",
-    "connect-redis": "^4.0.4",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "nodemon": "^2.0.4",
-    "pug": "^3.0.0",
-    "redis": "^3.0.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://mockme.openshift.myorderbox.com",
   "eslintConfig": {
     "extends": "react-app"
   },
