--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 # dependencies
 node_modules
-
 /.pnp
 .pnp.js
 
@@ -10,15 +9,19 @@ node_modules
 /coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
 .env
 .env.local
-.env.development.local
+.env.development
 .env.test.local
-.env.production.local
+.env.production
+
+.firebase
+.firebaserc
+firebase.json
 
 npm-debug.log*
 yarn-debug.log*
