--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "private": true,
   "dependencies": {
     "@reach/router": "^1.3.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "npm run build & nodemon -r dotenv/config server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://mockme.openshift.myorderbox.com",
+  "devDependencies": {
+    "body-parser": "^1.19.0",
+    "connect-redis": "^4.0.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "nodemon": "^2.0.4",
+    "redis": "^3.0.2"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
