--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
-/.pnp
-.pnp.js
+*/node_modules
 
 # testing
 /coverage
@@ -13,15 +11,7 @@ build
 
 # misc
 .DS_Store
-.env
-.env.local
-.env.development
-.env.test.local
-.env.production
-
-.firebase
-.firebaserc
-firebase.json
+*/.env*
 
 npm-debug.log*
 yarn-debug.log*
