--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Mini Mocking API calls application",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon -r dotenv/config index.js",
     "start": "node index.js"
   },
   "author": "Tushar J",
@@ -12,8 +13,10 @@
     "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "nodemon": "^2.0.4",
     "redis": "^3.0.2"
   }
 }
