--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,8 @@
-FROM node:lts-alpine as build
+FROM node:lts-alpine
 
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
+WORKDIR /client
+COPY ./package*.json /client/
+RUN npm ci
+
 COPY . .
-RUN npm run build
-
-# production environment
-FROM nginx:stable-alpine
-COPY --from=build /app/build /usr/share/nginx/html
-COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD [ "npm", "start" ]
