--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 3001:3000
     volumes:
       - ./client:/client
-      - /client/node_modules
+      - ./client/node_modules:/client/node_modules
     stdin_open: true
   server:
     build: ./server
@@ -16,7 +16,7 @@ services:
       - "8080:8080"
     volumes:
       - ./server:/server
-      - /server/node_modules
+      - ./server/node_modules:/server/node_modules
   redis-server:
     image: redis
     command: redis-server
