--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "redis": "^3.0.2"
   }
