--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "react-json-view": "^1.19.1"
   }
 }
