--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1",
+    "typescript": "^3.9.6"
+  },
+  "devDependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@reach/router": "^1.3.4",
+    "@types/node": "^14.0.22",
+    "@types/reach__router": "^1.3.5",
+    "@types/react": "^16.9.43",
     "emotion-theming": "^10.0.27",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-json-view": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,8 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-json-view": "^1.19.1"
   }
 }
