--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "uuid": "^8.2.0"
   }
 }
