--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "typescript": "^3.9.6"
   },
   "devDependencies": {
@@ -13,9 +14,9 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@reach/router": "^1.3.4",
-    "@types/node": "^14.0.22",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.43",
+    "@types/react-select": "^3.0.14",
     "emotion-theming": "^10.0.27",
     "react-json-view": "^1.19.1"
   },
