--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -40,6 +40,13 @@
       "src": "icons/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
+      "density": "4.0",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "icons/android-icon-192x192.png",
+      "sizes": "512x512",
+      "type": "image/png",
       "density": "4.0"
     }
   ]
