--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@reach/router": "^1.3.4",
+    "@types/node": "^14.11.2",
     "@types/reach__router": "^1.3.5",
     "@types/react": "^16.9.43",
     "@types/react-select": "^3.0.14",
