--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "3.4.1",
-    "react-select": "^3.1.0",
-    "typescript": "^3.9.6"
+    "react-select": "^3.2.0",
+    "typescript": "^3.9.9",
+    "react-json-view": "^1.21.3",
+    "@reach/router": "^1.3.4",
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.1.1",
+    "@emotion/styled": "^10.0.27",
+    "emotion-theming": "^10.0.27"
   },
   "devDependencies": {
-    "@chakra-ui/core": "^0.8.0",
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "@reach/router": "^1.3.4",
-    "@types/node": "^14.11.2",
-    "@types/reach__router": "^1.3.5",
-    "@types/react": "^16.9.43",
-    "@types/react-select": "^3.0.14",
-    "emotion-theming": "^10.0.27",
-    "react-json-view": "^1.19.1"
+    "@types/node": "^14.17.1",
+    "@types/reach__router": "^1.3.7",
+    "@types/react": "^16.14.8",
+    "@types/react-select": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
