--- a/server/package.json
+++ b/server/package.json
@@ -9,15 +9,17 @@
   },
   "author": "Tushar J",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
-    "nodemon": "^2.0.4",
-    "redis": "^3.0.2",
-    "uuid": "^8.2.0"
+    "redis": "^3.1.2",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
